--- a/client/package.json
+++ b/client/package.json
@@ -10,15 +10,28 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@freakycoder/react-native-helpers": "^0.1.3",
     "@react-native-community/masked-view": "^0.1.7",
+    "@react-navigation/drawer": "^5.1.1",
     "@react-navigation/native": "^5.0.9",
     "@react-navigation/stack": "^5.1.1",
     "react": "16.9.0",
     "react-native": "0.61.5",
+    "react-native-animation-layout": "0.0.13",
+    "react-native-autocomplete-input": "^4.1.0",
+    "react-native-dynamic-search-bar": "^0.3.1",
+    "react-native-dynamic-vector-icons": "^0.2.2",
+    "react-native-elements": "^1.2.7",
+    "react-native-fast-image": "^8.1.5",
     "react-native-gesture-handler": "^1.6.0",
+    "react-native-gradient-card-view": "^0.1.0",
+    "react-native-ionicons": "^5.0.0-beta",
+    "react-native-linear-gradient": "^2.5.6",
     "react-native-reanimated": "^1.7.0",
     "react-native-safe-area-context": "^0.7.3",
-    "react-native-screens": "^2.2.0"
+    "react-native-screens": "^2.2.0",
+    "react-native-vector-icons": "^6.6.0",
+    "react-navigation": "^4.2.2"
   },
   "devDependencies": {
     "@babel/core": "^7.8.7",
