--- a/client/package.json
+++ b/client/package.json
@@ -31,7 +31,8 @@
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.2.0",
     "react-native-vector-icons": "^6.6.0",
-    "react-navigation": "^4.2.2"
+    "react-navigation": "^4.2.2",
+    "validator": "^13.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.7",
