--- a/client/package.json
+++ b/client/package.json
@@ -32,6 +32,10 @@
     "react-native-screens": "^2.2.0",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.2.2",
+    "react-redux": "^7.2.0",
+    "redux": "^4.0.5",
+    "redux-persist": "^6.0.0",
+    "redux-thunk": "^2.3.0",
     "validator": "^13.0.0"
   },
   "devDependencies": {
