--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/drawer": "^5.1.1",
     "@react-navigation/native": "^5.0.9",
     "@react-navigation/stack": "^5.1.1",
+    "axios": "^0.19.2",
     "react": "16.9.0",
     "react-native": "0.61.5",
     "react-native-animation-layout": "0.0.13",
@@ -25,6 +26,7 @@
     "react-native-fast-image": "^8.1.5",
     "react-native-gesture-handler": "^1.6.0",
     "react-native-gradient-card-view": "^0.1.0",
+    "react-native-image-slider-box": "^1.0.12",
     "react-native-ionicons": "^5.0.0-beta",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-reanimated": "^1.7.0",
