--- a/client/package.json
+++ b/client/package.json
@@ -26,9 +26,12 @@
     "react-native-fast-image": "^8.1.5",
     "react-native-gesture-handler": "^1.6.0",
     "react-native-gradient-card-view": "^0.1.0",
+    "react-native-image-crop-picker": "^0.28.0",
+    "react-native-image-progress": "^1.1.1",
     "react-native-image-slider-box": "^1.0.12",
     "react-native-ionicons": "^5.0.0-beta",
     "react-native-linear-gradient": "^2.5.6",
+    "react-native-progress": "^4.1.2",
     "react-native-reanimated": "^1.7.0",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.2.0",
