--- a/client/package.json
+++ b/client/package.json
@@ -35,6 +35,7 @@
     "react-native-reanimated": "^1.7.0",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.2.0",
+    "react-native-searchable-dropdown": "^1.1.1",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.2.2",
     "react-redux": "^7.2.0",
