--- a/client/package.json
+++ b/client/package.json
@@ -36,6 +36,7 @@
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.2.0",
     "react-native-searchable-dropdown": "^1.1.1",
+    "react-native-select-multiple": "^2.1.0",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.2.2",
     "react-redux": "^7.2.0",
