--- a/client/package.json
+++ b/client/package.json
@@ -40,6 +40,7 @@
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.2.2",
     "react-redux": "^7.2.0",
+    "reanimated-bottom-sheet": "^1.0.0-alpha.19",
     "redux": "^4.0.5",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
