--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/native": "^5.0.9",
     "@react-navigation/stack": "^5.1.1",
     "axios": "^0.19.2",
+    "prop-types": "^15.7.2",
     "react": "16.9.0",
     "react-native": "0.61.5",
     "react-native-animation-layout": "0.0.13",
@@ -37,6 +38,7 @@
     "react-native-screens": "^2.2.0",
     "react-native-searchable-dropdown": "^1.1.1",
     "react-native-select-multiple": "^2.1.0",
+    "react-native-snap-carousel": "^3.9.0",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.2.2",
     "react-redux": "^7.2.0",
