--- a/client/package.json
+++ b/client/package.json
@@ -26,7 +26,7 @@
     "react-native-dynamic-vector-icons": "^0.2.2",
     "react-native-elements": "^1.2.7",
     "react-native-fast-image": "^8.1.5",
-    "react-native-gesture-handler": "^1.6.0",
+    "react-native-gesture-handler": "^1.6.1",
     "react-native-gradient-card-view": "^0.1.0",
     "react-native-image-crop-picker": "^0.28.0",
     "react-native-image-progress": "^1.1.1",
@@ -35,12 +35,13 @@
     "react-native-linear-gradient": "^2.5.6",
     "react-native-multiple-select": "^0.5.5",
     "react-native-progress": "^4.1.2",
-    "react-native-reanimated": "^1.7.0",
+    "react-native-reanimated": "^1.8.0",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.2.0",
     "react-native-sectioned-multi-select": "^0.7.7",
     "react-native-select-multiple": "^2.1.0",
     "react-native-snap-carousel": "^3.9.0",
+    "react-native-tab-view": "^2.14.1",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.2.2",
     "react-redux": "^7.2.0",
