--- a/client/package.json
+++ b/client/package.json
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "@freakycoder/react-native-helpers": "^0.1.3",
+    "@react-native-community/datetimepicker": "^2.3.2",
     "@react-native-community/masked-view": "^0.1.7",
     "@react-navigation/drawer": "^5.1.1",
     "@react-navigation/native": "^5.0.9",
     "@react-navigation/stack": "^5.1.1",
     "axios": "^0.19.2",
+    "moment": "^2.25.3",
     "prop-types": "^15.7.2",
     "react": "16.9.0",
     "react-native": "0.61.5",
@@ -33,6 +35,7 @@
     "react-native-image-slider-box": "^1.0.12",
     "react-native-ionicons": "^5.0.0-beta",
     "react-native-linear-gradient": "^2.5.6",
+    "react-native-modal": "^11.5.6",
     "react-native-multiple-select": "^0.5.5",
     "react-native-progress": "^4.1.2",
     "react-native-reanimated": "^1.8.0",
