--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "moment": "^2.25.3",
     "prop-types": "^15.7.2",
     "react": "16.9.0",
+    "react-hook-form": "^5.7.2",
     "react-native": "0.61.5",
     "react-native-animation-layout": "0.0.13",
     "react-native-autocomplete-input": "^4.1.0",
