--- a/client/package.json
+++ b/client/package.json
@@ -29,6 +29,7 @@
     "react-native-dynamic-vector-icons": "^0.2.2",
     "react-native-elements": "^1.2.7",
     "react-native-fast-image": "^8.1.5",
+    "react-native-flash-message": "^0.1.15",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-gradient-card-view": "^0.1.0",
     "react-native-image-crop-picker": "^0.28.0",
