--- a/client/.gitignore
+++ b/client/.gitignore
@@ -5,6 +5,7 @@
 # Xcode
 #
 build/
+release/
 *.pbxuser
 !default.pbxuser
 *.mode1v3
@@ -24,6 +25,7 @@ DerivedData
 # Android/IntelliJ
 #
 build/
+release/
 .idea
 .gradle
 local.properties
