--- a/client/package.json
+++ b/client/package.json
@@ -36,6 +36,7 @@
     "react-native-image-crop-picker": "^0.28.0",
     "react-native-image-progress": "^1.1.1",
     "react-native-image-slider-box": "^1.0.12",
+    "react-native-indicators": "^0.17.0",
     "react-native-ionicons": "^5.0.0-beta",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-modal": "^11.5.6",
