--- a/client/package.json
+++ b/client/package.json
@@ -43,6 +43,7 @@
     "react-native-multiple-select": "^0.5.5",
     "react-native-progress": "^4.1.2",
     "react-native-reanimated": "^1.8.0",
+    "react-native-responsive-screen": "^1.4.1",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.2.0",
     "react-native-sectioned-multi-select": "^0.7.7",
